feat: distribute city cards to players on game start (#35)                - Fix cities.json deserialization by ignoring unknown fields (coordinates, connections)               - Validate playerId in createLobby consistent with join/leave                  -Fix tests: replace invalid CityColor.BLUE with GREEN
 - Fix LobbyServiceUnitTest: manually invoke loadCitiesFromJson() since @PostConstruct is not called outside Spring context