@@ -3,8 +3,14 @@ package at.aau.serg.websocketdemoserver.game;
 import at.aau.serg.websocketdemoserver.game.models.City;
 import at.aau.serg.websocketdemoserver.game.models.Continent;
 import at.aau.serg.websocketdemoserver.game.models.PlayerState;
+import jakarta.annotation.PostConstruct;
 import org.springframework.stereotype.Service;
+import tools.jackson.core.type.TypeReference;
+import tools.jackson.databind.DeserializationFeature;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.json.JsonMapper;
 
+import java.io.InputStream;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -17,6 +23,9 @@ public class CityDistributor {
 
     private final Random random;
 
+    // Hier speichern wir die Städte aus der JSON dauerhaft
+    private List<City> allCities = new ArrayList<>();
+
     public CityDistributor() {
         this(new Random());
     }
@@ -26,6 +35,37 @@ public class CityDistributor {
      */
     public CityDistributor(Random random) {
         this.random = Objects.requireNonNull(random, "random must not be null");
+    }
+
+    /**
+     * Wird automatisch beim Starten des Spring-Servers ausgeführt.
+     * Lädt die cities.json in den Arbeitsspeicher.
+     */
+    @PostConstruct
+    public void loadCitiesFromJson() {
+        ObjectMapper mapper = JsonMapper.builder()
+                .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+                .build();
+
+        TypeReference<List<City>> typeReference = new TypeReference<>() {};
+        InputStream inputStream = getClass().getResourceAsStream("/cities.json");
+
+        try {
+            if (inputStream != null) {
+                allCities = mapper.readValue(inputStream, typeReference);
+                System.out.println("✅ Erfolgreich geladen: " + allCities.size() + " Städte stehen zur Verfügung!");
+            } else {
+                System.err.println("❌ cities.json nicht im resources-Ordner gefunden!");
+            }
+        } catch (Exception e) {
+            System.err.println("❌ Fehler beim Laden der cities.json: " + e.getMessage() + " - " + e.getClass().getSimpleName());
+        }
+    }
+    /**
+     * Gibt eine Kopie aller verfügbaren Städte zurück.
+     */
+    public List<City> getAllCities() {
+        return new ArrayList<>(allCities);
     }
 
     /**
@@ -60,7 +100,7 @@ public class CityDistributor {
                 if (currentPool != null) {
                     // Ziehe n Karten für diesen Spieler aus diesem Kontinent
                     for (int i = 0; i < amountPerContinent && !currentPool.isEmpty(); i++) {
-                        City pickedCity = currentPool.remove(0);
+                        City pickedCity = currentPool.removeFirst();
                         player.getOwnedCities().add(pickedCity);
                     }
                 }
